--- a/src/Interaces/JFrameRegistrar.form
+++ b/src/Interaces/JFrameRegistrar.form
@@ -47,7 +47,7 @@
                           <Component id="jTextFieldNombre" pref="300" max="32767" attributes="0"/>
                           <Component id="jTextFieldCon2" pref="300" max="32767" attributes="0"/>
                           <Component id="jTextFieldCon" pref="300" max="32767" attributes="0"/>
-                          <Component id="jComboBoxClub" alignment="0" max="32767" attributes="0"/>
+                          <Component id="clubComboBox" alignment="0" max="32767" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="jComboBoxDia" min="-2" pref="51" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -104,7 +104,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jComboBoxClub" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="clubComboBox" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="22" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -220,7 +220,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldCon2ActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JComboBox" name="jComboBoxClub">
+    <Component class="javax.swing.JComboBox" name="clubComboBox">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="18" style="0"/>
@@ -229,6 +229,9 @@
           <StringArray count="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="clubComboBoxActionPerformed"/>
+      </Events>
       <AuxValues>
         <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
       </AuxValues>
