--- a/src/Interaces/JFrameTorneo.form
+++ b/src/Interaces/JFrameTorneo.form
@@ -47,7 +47,7 @@
                       <EmptySpace min="-2" pref="214" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
                           <Component id="modificarPartidas" max="32767" attributes="0"/>
-                          <Component id="registrarseTorneo" max="32767" attributes="0"/>
+                          <Component id="jButtonInscribirse" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -61,7 +61,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Component id="etiqTitulo" min="-2" pref="53" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="registrarseTorneo" min="-2" pref="46" max="-2" attributes="0"/>
+              <Component id="jButtonInscribirse" min="-2" pref="46" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" pref="50" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -82,7 +82,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JButton" name="registrarseTorneo">
+    <Component class="javax.swing.JButton" name="jButtonInscribirse">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Arial" size="18" style="0"/>
@@ -90,7 +90,7 @@
         <Property name="text" type="java.lang.String" value="INSCRIBIRSE"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="registrarseTorneoActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonInscribirseActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="etiqTitulo">
