--- a/src/Interaces/JFrameTorneo.form
+++ b/src/Interaces/JFrameTorneo.form
@@ -132,13 +132,7 @@
               <Font name="Arial" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="Partida1"/>
-                <StringItem index="1" value="Partida2"/>
-                <StringItem index="2" value="Partida3"/>
-                <StringItem index="3" value="Partida4"/>
-                <StringItem index="4" value="Partida5"/>
-              </StringArray>
+              <StringArray count="0"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" value=""/>
             <Property name="alignmentX" type="float" value="5.0"/>
